--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   ],
   "author": "Grant Howard",
   "license": "SEE LICENSE IN LICENSE.md",
+  "scripts": {
+    "dev": "tsc --watch",
+    "build": "tsc"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
@@ -17,7 +21,8 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.0",
