--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
     "prettier": "^3.1.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.1"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.0",
