Test before publish

--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           version: ^8.12.1
           run_install: true
+      - run: pnpm test
       - run: pnpm build
       - run: pnpm publish --no-git-checks
         env:
