--- a/tsconfig.json
+++ b/tsconfig.json
@@ -95,6 +95,9 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
+  "include": [
+    "**/*.ts"
+  ],
   "exclude": [
     "*.test.ts"
   ]
