--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@the1812/eslint-config",
-  "version": "1.2.2",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "version": "2.0.0",
+  "main": "dist/index.js",
+  "type": "module",
   "keywords": [
     "eslint",
     "eslintconfig"
@@ -14,35 +14,40 @@
   "author": "Grant Howard",
   "license": "SEE LICENSE IN LICENSE.md",
   "scripts": {
-    "dev": "tsc --watch",
-    "build": "tsc",
+    "dev": "tsc -p tsconfig.build.json --watch",
+    "build": "tsc -p tsconfig.build.json",
+    "lint": "eslint . --fix",
     "test": "vitest"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.54.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-vue": "^9.18.1",
-    "prettier": "^3.1.0",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.1"
-  },
-  "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.13.0",
-    "@typescript-eslint/parser": "^6.13.0",
-    "eslint": "^8.54.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-vue": "^9.18.1",
-    "prettier": "^3.1.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
+  },
+  "engines": {
+    "node": ">=20.11.0"
+  },
+  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
+  },
+  "dependencies": {
+    "@eslint/js": "9.21.0",
+    "@typescript-eslint/parser": "8.26.0",
+    "@typescript-eslint/utils": "8.26.0",
+    "eslint": "9.21.0",
+    "eslint-config-prettier": "10.0.2",
+    "eslint-import-resolver-typescript": "3.8.3",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "5.2.3",
+    "eslint-plugin-vue": "9.32.0",
+    "prettier": "3.5.3",
+    "typescript": "5.8.2",
+    "typescript-eslint": "8.26.0"
+  },
+  "devDependencies": {
+    "@types/node": "22",
+    "vite": "6.2.0",
+    "vitest": "3.0.7"
   }
 }
