--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "2.0.0",
   "main": "dist/index.js",
   "type": "module",
+  "exports": {
+    ".": "./dist/index.js",
+    "./utils": "./dist/utils.js",
+    "./vue": "./dist/vue.js"
+  },
   "keywords": [
     "eslint",
     "eslintconfig"
