--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           run_install: true
+      - run: pnpm lint
       - run: pnpm test
       - run: pnpm build
       - run: pnpm publish --no-git-checks
