--- a/package.json
+++ b/package.json
@@ -41,21 +41,26 @@
     "@eslint/js": "9.21.0",
     "@typescript-eslint/parser": "8.26.0",
     "@typescript-eslint/utils": "8.26.0",
-    "eslint": "9.21.0",
     "eslint-config-prettier": "10.0.2",
     "eslint-import-resolver-typescript": "3.8.3",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-prettier": "5.2.3",
     "eslint-plugin-vue": "9.32.0",
-    "prettier": "3.5.3",
-    "typescript": "5.8.2",
     "typescript-eslint": "8.26.0",
     "vue-eslint-parser": "9.4.3"
   },
   "devDependencies": {
     "@types/eslint-config-prettier": "6.11.3",
     "@types/node": "22",
+    "eslint": "9.21.0",
+    "prettier": "3.5.3",
+    "typescript": "5.8.2",
     "vite": "6.2.0",
     "vitest": "3.0.7"
+  },
+  "peerDependencies": {
+    "eslint": "^9.21.0",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
   }
 }
