--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           run_install: true
       - run: pnpm build
-      - run: pnpm lint
+      - run: pnpm eslint .
       - run: pnpm test
       - run: pnpm publish --no-git-checks
         env:
